# RustVACF

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/modules/: readers.rs  vacf.rs  velocities.rs
tests/: reader_tests.rs  vacf_tests.rs
tests/lammps_dump/: dummy.1.dump
