[package]
name = "RustVACF"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
ndarray = "0.15.6"
ndarray-csv = "0.5.2"
ndarray-parallel = "0.9.1"
rayon = "1.7.0"
